[project]
name = "lnpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
